--- a/estolos/style.css
+++ b/estolos/style.css
@@ -1,7 +1,31 @@
 @charset "UTF-8";
 
 /*
-paleta de cores
-verde:#49a09d
-lilás:#5f2c82
+  paleta de cores
+ verde:#49a09d
+ lilás:#5f2c82
 */
+
+/**{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}*/
+
+html{
+    background-color: aliceblue;
+}
+main{
+    margin: auto;
+    background-color: rgb(45, 178, 255);
+    width: 768px;
+}
+
+#imagem{
+    
+
+}    
+
+div h1{
+    text-align: center;
+}
