--- a/estolos/style.css
+++ b/estolos/style.css
@@ -6,26 +6,52 @@
  lilás:#5f2c82
 */
 
-/**{
+*{
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-}*/
-
-html{
-    background-color: aliceblue;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
 }
+
+body, html{
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+
+}
+
 main{
-    margin: auto;
-    background-color: rgb(45, 178, 255);
-    width: 768px;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
 }
 
-#imagem{
-    
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
 
-}    
 
-div h1{
-    text-align: center;
+    display: block;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px black;
+}
+
+section#login div#imagem{
+    display: block;
+    background: #5f2c82 url(../imagens/pexels-tanya-gomes-13183160.jpg) no-repeat;
+    height: 250px;
+    background-size: cover;
+    background-position:top center;
+
+}
+
+section#login div#formulario{
+    padding: 10px;
+
 }
