--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@
 }
 
 body, html{
-    background-color: #5f2c82;
+    background-image: linear-gradient(to top, #49a09d, #5f2c82  ) ;
     height: 100vh;
     width: 100vw;
 
@@ -40,6 +40,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px black;
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 
 section#login div#imagem{
