--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,6 +26,15 @@ main{
     position: relative;
 }
 
+div#formulario h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario p{
+    font-size: 0.8em;
+}
+
 section#login {
     position: absolute;
     top: 50%;
@@ -37,7 +46,7 @@ section#login {
     display: block;
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 550px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px black;
 
@@ -57,4 +66,56 @@ section#login div#imagem{
 section#login div#formulario{
     padding: 10px;
 
+}
+
+form div#campo{
+    background-color: #5f2c82;
+    margin: 5px 0px;
+    border-radius: 5px;
+    height: 40px;
+    width: 100%;
+    display: block;
+
+}
+
+div#campo label{
+    display: none;
+}
+
+form input[type= submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    background-color: #49a09d ;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+form input[type=submit]:hover{
+    background-color: #33706e;
+}
+
+form a#botao{
+    display: block;
+    width: 100%;
+    background-color: white;
+    text-align: center;
+    border: 1px solid #33706e;
+    border-radius: 5px;
+    margin-top: 5px;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 1em;
+    color: #33706e;
+}
+
+form a#botao:hover{
+    background-color: #5ddfda;
+}
+
+form a#botao span{
+    font-size: 0.8em;
 }
