--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -10,6 +10,7 @@
 
     section#login {
         width: 80vw;
+        height: 290px;
     }
 
     section#login div#imagem{
@@ -32,6 +33,11 @@
 
     section#login {
         width: 990px;
+        height: 350px;
+    }
+
+    div#formulario p{
+        margin: 10px 0px;
     }
 
     section#login div#imagem{
